--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -19,10 +19,10 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a th:href="@{/}">Home</a></li>
+                    <li><a th:href="@{/register}">Register</a></li>
 <!--                     <li><a th:href="@{/}"><span sec:authentication="name"></span></a></li> -->
 <!--                     <li><a th:href="@{/}"><span sec:authentication="principal.authorities"></span></a></li> -->
-                    <li><a th:href="@{/logout}">Logout</a></li>
+                    <li><a th:href="@{/user/logout}">Logout</a></li>
                 </ul>
             </div> 
 	            
