--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -13,18 +13,12 @@
 
     <div class="row"  style="margin-top:20px">
         <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-            <form th:action="@{/login}" method="post">
+            <form th:action="@{/user/register}" method="post">
                 <fieldset>
-                    <h1>Please Sign In</h1>
-
-                    <div th:if="${param.error}">
-                        <div class="alert alert-danger">
-                            Invalid username and password.
-                        </div>
-                    </div>
-                    <div th:if="${param.logout}">
-                        <div class="alert alert-info">
-                            You have been logged out.
+                    <h1>User Register</h1> 
+  					<div th:if="${error}">
+                        <div class="alert alert-info" th:value="${error}">
+                           User is exists, please change to others
                         </div>
                     </div>
 
@@ -39,7 +33,7 @@
 
                     <div class="row">
                         <div class="col-xs-6 col-sm-6 col-md-6"> 
-                            <input type="submit" class="btn btn-lg btn-primary btn-block" value="Sign In"/>
+                            <input type="submit" class="btn btn-lg btn-primary btn-block" value="Register"/>
                         </div>
                         <div class="col-xs-6 col-sm-6 col-md-6">
                         </div>
