--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -14,7 +14,7 @@
             <span sec:authorize="isAuthenticated()">
                 | Logged user: <span sec:authentication="name"></span> |
                 Roles: <span sec:authentication="principal.authorities"></span> |
-                <a th:href="@{/user/logout}">Sign Out</a>
+                <a th:href="@{/logout}">Sign Out</a>
             </span> 
             
         <script type="text/javascript" th:src="@{/webjars/jquery/1.11.1/jquery.min.js}" ></script> 
