--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,7 +1,8 @@
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head> 
     <div th:fragment="header-css">
     	<meta http-equiv="X-UA-Compatible" content="IE=edge"></meta> 
+    	 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <!-- this is header-css -->
         <link rel="stylesheet" type="text/css"
              th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" /> 
@@ -11,24 +12,61 @@
 </head>
 <body>
 <div th:fragment="header">
-    <!-- this is header -->
-    <nav class="navbar navbar-inverse">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" th:href="@{/}">Spring Boot</a>
-            </div>
-            <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a th:href="@{/register}">Register</a></li>
-<!--                     <li><a th:href="@{/}"><span sec:authentication="name"></span></a></li> -->
-<!--                     <li><a th:href="@{/}"><span sec:authentication="principal.authorities"></span></a></li> -->
-                    <li><a th:href="@{/user/logout}">Logout</a></li>
-                </ul>
-            </div> 
-	            
-        </div>
-    </nav>
+    <!-- this is header -->  
+	 <nav class="navbar navbar-inverse">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>                        
+	      </button>
+	      <a class="navbar-brand" href="#">Logo</a>
+	    </div>
+	    <div class="collapse navbar-collapse" id="myNavbar">
+	      <ul class="nav navbar-nav">
+	        <li><a href="#">Home</a></li>
+	        <li><a href="#">ReportConfig</a></li>
+	        <li><a href="#">ColumnConfig</a></li>
+	        <li><a href="#">ReportService</a></li>
+	        <li class="nav-item dropdown">
+	            <a class="nav-link dropdown-toggle" href="http://example.com" id="menu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin</a>
+	            <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+			      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">User</a></li>
+			      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Role</a></li>
+			      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Privilege</a></li>
+			      <li role="presentation" class="divider"></li>
+			      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">More</a></li>
+			    </ul>
+	        </li>
+	        <li class="nav-item dropdown">
+	            <a class="nav-link dropdown-toggle" href="http://example.com" id="menu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">System</a>
+	            <ul class="dropdown-menu" role="menu" aria-labelledby="menu2">
+			      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Properties</a></li>
+			      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Code</a></li> 
+			      <li role="presentation" class="divider"></li>
+			      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">More</a></li>
+			    </ul>
+	        </li>
+	      </ul> 
+<!-- 	      <form class="navbar-form navbar-right" role="search"> -->
+<!-- 	        <div class="form-group input-group"> -->
+<!-- 	          <input type="text" class="form-control" placeholder="Search.."/> -->
+<!-- 	          <span class="input-group-btn"> -->
+<!-- 	            <button class="btn btn-default" type="button"> -->
+<!-- 	              <span class="glyphicon glyphicon-search"></span> -->
+<!-- 	            </button> -->
+<!-- 	          </span>         -->
+<!-- 	        </div> -->
+<!-- 	      </form>  -->
+	      <ul class="nav navbar-nav navbar-right">  
+	        	<li sec:authorize="!isAuthenticated()"><a th:href="@{/login}"><span class="glyphicon glyphicon-log-in"></span>Login</a></li>
+		        <li sec:authorize="isAuthenticated()"><a href="#"><span class="glyphicon glyphicon-user" sec:authentication="name"></span></a></li>
+		        <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-out" sec:authorize="isAuthenticated()"></span>Logout</a></li>
+	      </ul>
+	    </div>
+	  </div>
+	</nav>
 </div>
-
 </body>
 </html>
